# code-forces-ws

./: .gitignore  Cargo.toml  README.md  check_code.ps1  check_code.sh  pyproject.toml  rust_win_config.toml
mixed/test-pkg-rust-python/: Cargo.toml  pyproject.toml
mixed/test-pkg-rust-python/src/: lib.rs
mixed/test-pkg-rust-python/src/test_pkg_rust_python/: __init__.py  _core.pyi  test_core.py
python/test-pkg/: pyproject.toml
python/test-pkg/src/test_pkg/: __init__.py  test_init.py
python/test-pkg2/: pyproject.toml
python/test-pkg2/src/test_pkg2/: __init__.py  test_init.py
rust/test-pkg/: Cargo.toml
rust/test-pkg/src/: main.rs
rust/test-pkg2/: Cargo.toml
rust/test-pkg2/src/: main.rs
win_config/: rust_config.toml
