[project]
name = "code-forces-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Krystian Krakowski", email = "kkrakowski22@gmail.com"}]
dependencies = []

[tool.uv.workspace]
members = ["python/*"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PLR2004", "S101", "D100", "D101", "D102", "D103", "D104", "D203", "D212", "T201"]
