[project]
name = "test-pkg-rust-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
test-pkg-rust-python = "test_pkg_rust_python:main"

[tool.maturin]
module-name = "test_pkg_rust_python._core"
python-packages = ["test_pkg_rust_python"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
