[project]
name = "test-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
test-pkg = "test_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
